--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 
 # dependencies
 /node_modules
+backend/node_modules/
 
 # next.js
 /.next/
@@ -18,6 +19,7 @@ yarn-error.log*
 
 # env files
 .env*
+backend/.env
 
 # vercel
 .vercel
@@ -25,3 +27,17 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Backend specific
+backend/logs/
+*.log
+
+# IDE files
+.vscode/
+.idea/
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+Thumbs.db
